src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>About_Self__c</fullName>
        <description>Say something about yourself.</description>
        <label>About Self</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Phone_Number__c</fullName>
        <label>Bank Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JAIPUR</fullName>
                </value>
                <value>
                    <fullName>KOLKATA</fullName>
                </value>
                <value>
                    <fullName>MUMBAI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <formula>VALUE(Mobile_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Card_No__c</fullName>
        <label>Credit Card No.</label>
        <length>15</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <label>Current Year</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTime_of_Registration__c</fullName>
        <label>DateTime of Registration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Donation_Amount__c</fullName>
        <label>Donation Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Donation_Details__c</fullName>
        <label>Donation Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Email Address of the student or his family member</description>
        <label>Email Address</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Exact_Location__c</fullName>
        <label>Exact Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Exam_Fees_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exam Fees Submitted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <description>Father&apos;s name of the student</description>
        <label>Father Name</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Father_s_Mobile_Number__c</fullName>
        <label>Father&apos;s Mobile Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fees_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fees Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GitHub_Link__c</fullName>
        <label>GitHub Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IFCS_Code__c</fullName>
        <label>IFCS Code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Donation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Donation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Overall_Grade__c</fullName>
        <label>Overall Grade</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Exam_Fees__c</fullName>
        <label>Pending Exam Fees</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Fees_Amount__c</fullName>
        <label>Pending Fees Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Overall_Amount__c</fullName>
        <formula>Pending_Fees_Amount__c  +  Pending_Exam_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Overall Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Registration_no__c</fullName>
        <externalId>true</externalId>
        <label>Registration no.</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Roll_Number__c</fullName>
        <label>Roll Number</label>
        <precision>9</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Maharashtra</fullName>
                </value>
                <value>
                    <fullName>Rajasthan</fullName>
                </value>
                <value>
                    <fullName>West Bengal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stream__c</fullName>
        <label>Stream</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subjects_in_which_back__c</fullName>
        <label>Subjects in which back</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Maths</fullName>
                </value>
                <value>
                    <fullName>Computer Science</fullName>
                </value>
                <value>
                    <fullName>Physics</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Value Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subjects_in_which_back_in_3rd_sem__c</fullName>
        <label>Subjects in which back in 3rd sem</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Maths</fullName>
                </value>
                <value>
                    <fullName>Computer Science</fullName>
                </value>
                <value>
                    <fullName>Physics</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Value Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subjects_in_which_back_in_4th_sem__c</fullName>
        <label>Subjects in which back in 4th sem</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Maths</fullName>
                </value>
                <value>
                    <fullName>Computer Science</fullName>
                </value>
                <value>
                    <fullName>Physics</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Value Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1st_Sem_Back__c</fullName>
        <label>1st Sem Back?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Result not out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1st_Sem_Percentage__c</fullName>
        <label>1st Sem Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X2nd_Sem_Percentage__c</fullName>
        <label>2nd Sem Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X3rd_Sem_Back__c</fullName>
        <label>3rd Sem Back?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Result not out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X4th_Sem_Back__c</fullName>
        <label>4th Sem Back</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Result not out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X4th_Sem_Percentage__c</fullName>
        <label>4th Sem Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>Registrar</fullName>
        <active>true</active>
        <label>Registrar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Teacher</fullName>
        <active>true</active>
        <label>Teacher</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>